[package]
name = "endless_siege"
version = "0.1.0"
publish = false
authors = ["Brandon Haggstrom <me@rigidnetwork.com>"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
dev = [
    "bevy/dynamic_linking",
]

# All of Bevy's default features exept for the audio related ones (bevy_audio, vorbis), since they clash with bevy_kira_audio
#   and android_shared_stdcxx, since that is covered in `mobile`
[dependencies]
bevy = { version = "0.12.1", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "hdr",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "default_font",
    "webgl2",
] }
bevy_kira_audio = "0.18" 
bevy_asset_loader = "0.18"
bevy_common_assets = { version = "0.8.0", features = ["ron"] }
bevy_xpbd_2d = "0.3.2"
webbrowser = { version = "0.8", features = ["hardened"] }
serde = { version = "1.0.193", features = ["derive"] }
rand = "0.8.5"

# keep the following in sync with Bevy's dependencies
winit = { version = "0.28.7", default-features = false }
image = { version = "0.24", default-features = false }
parry2d = "0.13.5"
nalgebra = "0.32.3"

[build-dependencies]
embed-resource = "1.4"
